Fix survey close icon not showing (#2885)

--- a/themes/finna2/less/finna/survey.less
+++ b/themes/finna2/less/finna/survey.less
@@ -34,9 +34,6 @@
     }
     & .icon {
         color: @brand-primary;
-        right: -22px;
-        top: -22px;
-        position: absolute;
         font-size: 40px;
     }
     & .icon-background {
@@ -47,6 +44,9 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     @media print {
         display: none;
